// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`datasource/docker/index getReleases ignores unsupported manifest 1`] = `
Object {
  "registryUrl": "https://registry.company.com",
  "releases": Array [],
}
`;

exports[`datasource/docker/index getReleases ignores unsupported schema version 1`] = `
Object {
  "registryUrl": "https://registry.company.com",
  "releases": Array [],
}
`;

exports[`datasource/docker/index getReleases supports labels 1`] = `
Object {
  "registryUrl": "https://registry.company.com",
  "releases": Array [
    Object {
      "version": "1.0.0",
    },
    Object {
      "version": "1.2.3",
    },
    Object {
      "version": "1.2.3-alpine",
    },
    Object {
      "version": "1-alpine",
    },
    Object {
      "version": "2.0.0",
    },
    Object {
      "version": "2-alpine",
    },
  ],
  "sourceUrl": "https://github.com/renovatebot/renovate",
}
`;

exports[`datasource/docker/index getReleases supports manifest lists 1`] = `
Object {
  "registryUrl": "https://registry.company.com",
  "releases": Array [],
  "sourceUrl": "https://github.com/renovatebot/renovate",
}
`;

exports[`datasource/docker/index getReleases supports redirect 1`] = `
Object {
  "registryUrl": "https://registry.company.com",
  "releases": Array [],
}
`;
